Fixed block alignment

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,6 +65,10 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
+.container {
+	padding: 40px;
+}
+
 /* 
 =========================
 	Nav Bar
@@ -79,12 +83,13 @@ h1, h2, h3, h4, h5 {
 
 .header-container nav a {
 	margin: 0px 40px;
+	text-decoration: none;
+	color: gray;
 }
 
 nav {
 	width: 100%;
 	text-align: center;
-	background: blue;
 }
 
 /* 
@@ -92,22 +97,15 @@ nav {
 	Main Title
 ========================= */
 
-.hero-section {
-	width: auto;
-	height: 300px;
-	display: inline-block;
-	font-size: 3em;
-	background: green;
-}
-
 .hero-section img {
-	background: lightcoral;
+	margin: 10px;
 }
 
 .heading-text {
+	display: inline-block;
 	text-align: center;
-	width: 300px;
-	background: yellow;
+	margin: 150px;
+	font-size: 5em;
 }
 
 /* 
@@ -118,4 +116,50 @@ nav {
 .main-content {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
+}
+
+.features {
+	height: 100px;
+	width: 49%;
+	display: inline-block;
+	margin: 20px 0px 20px 20px;
+}
+
+.about {
+	height: 100px;
+	width: 49%;
+	display: inline-block;
+}
+
+.middle-img {
+	display: block;
+	width: 100%;
+}
+
+.services {
+	height: 100px;
+	width: 32%;
+	display: inline-block;
+	margin: 20px 10px;
+}
+
+.product {
+	height: 100px;
+	width: 32%;
+	display: inline-block;
+}
+
+.vision {
+	height: 100px;
+	width: 32%;
+	display: inline-block;
+}
+
+address {
+	margin: 20px 0px;
+}
+
+.copyright {
+	margin: 30px 0px;
+	text-align: center;
 }
